Add deep linking and Share-to-Scan support with improved network status

--- a/app.json
+++ b/app.json
@@ -32,7 +32,10 @@
         "android.permission.VIBRATE",
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "WRITE_EXTERNAL_STORAGE",
+        "INTERNET",
+        "ACCESS_NETWORK_STATE",
+        "ACCESS_WIFI_STATE"
       ]
     },
     "web": {
