Saved edited files

--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
       [
         "expo-router",
         {
-          "origin": "https://rork.com/"
+          "origin": "https://reail.app/"
         }
       ],
       "expo-font",
